Reformat title on add multiple watches page.

--- a/app/views/addMultipleWatches.html
+++ b/app/views/addMultipleWatches.html
@@ -1,8 +1,8 @@
 <div id="add-multiple-page">
   <h3>Add Multiple Crowd Watches:</h3>
 
-  <h4>{{name}}<h4>
-  <h5>{{address}}, {{city}}</h5>
+  <h4 class="spot-name">{{name}}</h4>
+  <h5 class="spot-address">{{address}}, {{city}}</h5>
 
 <div class="visualize">
   <div class="crowd-factor">
