--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1485,8 +1485,13 @@ input[type='text']:focus {
     font-weight: normal;
   }
 
-  h5 {
-    display: inline-block;
+  .spot-name {
+    margin: 5px 0 0 0;
+  }
+
+  .spot-address {
+    color: $acc-med;
+    margin: 0 0 0 10px;
   }
 }
 
