--- a/app/views/addMultipleWatches.html
+++ b/app/views/addMultipleWatches.html
@@ -23,17 +23,6 @@
     </div>
   </div>
 
-  <div class="watch-hours" ng-repeat="watch in watchHours">
-    <h5>
-      {{watch.start.day}} {{watch.start.hour}} {{watch.start.meridiem}} 
-      <span class="separator">to</span> 
-      {{watch.stop.day}} {{watch.stop.hour}} {{watch.stop.meridiem}}
-      <span class="separator">-</span>
-      <span class="{{watch.cf_status}}">{{watch.cf_status}}</span>
-    </h5>
-    <a class="clickable" ng-click="deleteHours($index)">delete</a>
-  </div>
-
   <form class="form-horizontal">
     
     <div class="control-group">
@@ -78,5 +67,17 @@
       </div>
     </div>
   </form>
+
+  <div class="watch-hours" ng-repeat="watch in watchHours">
+    <h5 class="watch-time">
+      {{watch.start.day}} {{watch.start.hour}} {{watch.start.meridiem}} 
+      <span class="separator">to</span> 
+      {{watch.stop.day}} {{watch.stop.hour}} {{watch.stop.meridiem}}
+      <span class="separator">-</span>
+      <span class="{{watch.cf_status}}">{{watch.cf_status}}</span>
+    </h5>
+    <a class="clickable" ng-click="deleteHours($index)">delete</a>
+  </div>
+
 </div>
 
