--- a/app/views/home.html
+++ b/app/views/home.html
@@ -28,7 +28,7 @@
   <div class="page">
 
     <div class="listings main-col">
-      <h2 ng-show="noSpots">No spots of this type for your search area.  Help us out and add a spot!</h2>
+      <h3 ng-show="noSpots">You have no favorites.</h3>
       <div class="listing" ng-click="getSpot(spot.id)" ng-repeat="spot in spots">
         <div class="rank">
           <h4>{{startIndex + $index}}.</h4>
