--- a/app/views/home.html
+++ b/app/views/home.html
@@ -2,12 +2,11 @@
   <div class="title-bar clearfix">
     <div class="main-col">
       <div class="top">
-        <img class="b4cm-icon" ng-src="../images/b4cm-icon-{{listings.type | lowercase}}.png">
-        <h2 class="listing-type">{{listings.type | uppercase}}</h2>
-        <h3 class="listing-location">{{listings.displayAddress}}</h3>
+        <h2 class="listing-type">{{userName}}</h2>
       </div>
       <div class="bottom">
         <h6 class="listing-nums" ng-hide="noSpots">{{startIndex}}-{{startIndex + spots.length - 1}} of {{numReturns}}</h6>
+        <h4 class="favorites-title">Your Favorites</h4>
       </div>
     </div>
     <div class="side-col">
