Style fav and yelp link.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1010,7 +1010,7 @@ input[type='text']:focus {
 
     .yelp-link {
       display: inline-block;
-      margin-top: 22px;
+      margin-top: 5px;
     }
 
     .ad-text {
@@ -1036,7 +1036,7 @@ input[type='text']:focus {
   
   .fav {
     display: inline-block;
-    margin: 0 0 8px 0;
+    margin: 0 0 20px 40px;
   }
 
   .edit-spot {
