Adding and displaying favs seems to be working.

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -6,7 +6,7 @@
       </div>
       <div class="bottom">
         <h6 class="listing-nums" ng-hide="noSpots">{{startIndex}}-{{startIndex + spots.length - 1}} of {{numReturns}}</h6>
-        <h4 class="favorites-title">Your Favorites</h4>
+        <h4 class="favorites-title" ng-hide="noSpots">Your Favorites</h4>
       </div>
     </div>
     <div class="side-col">
