--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -911,6 +911,10 @@ input[type='text']:focus {
       width: 250px;
     }
   }
+
+  .side-col {
+    margin-bottom: 10px;
+  }
 }
 
 /******************
