Add address2 to edit spot page.

--- a/app/views/editSpot.html
+++ b/app/views/editSpot.html
@@ -28,6 +28,12 @@
       </div>
     </div>
     <div class="control-group">
+      <label class="control-label" for="spotAddress2">Address2:</label>
+      <div class="controls">
+        <input type="text" id="spotAddress2" ng-model="address2" placeholder="Address2">
+      </div>
+    </div>
+    <div class="control-group">
       <label class="control-label" for="spotCity">City:</label>
       <div class="controls">
         <input class="{{validForm.city}}" type="text" id="spotCity" ng-model="city" placeholder="City">
