--- a/app/views/listings.html
+++ b/app/views/listings.html
@@ -7,7 +7,7 @@
         <h3 class="listing-location">{{listings.displayAddress}}</h3>
       </div>
       <div class="bottom">
-        <h6 class="listing-nums" ng-hide="noSpots">{{startIndex}}-{{startIndex + spots.length - 1}} of {{numReturns}}</h6>
+        <h6 class="listing-nums" ng-hide="noSpots">{{startIndex}}-{{startIndex + spots.length - 1}} of {{typeSpots}}</h6>
         <a  ng-click="addSpot()">
           <button class="btn add-spot-btn">Add Spot</button>
         </a>
