--- a/app/views/spot.html
+++ b/app/views/spot.html
@@ -1,6 +1,6 @@
-<div id="spot-page">
+<div id="spot-page" ng-class="initClass">
 
-  <div ng-hide="doneInitializing">    
+  <div class="loading" ng-hide="doneInitializing">    
     <div id="floatingBarsG">
       <div class="blockG" id="rotateG_01"></div>
       <div class="blockG" id="rotateG_02"></div>
