--- a/app/views/addMultipleWatches.html
+++ b/app/views/addMultipleWatches.html
@@ -1,29 +1,43 @@
 <div id="add-multiple-page">
   <h3>Add Multiple Crowd Watches:</h3>
 
-  <h4 class="spot-name">{{name}}</h4>
-  <h5 class="spot-address">{{address}}, {{city}}</h5>
+  <h4 class="spot-name" ng-show="doneInitializing">{{name}}</h4>
+  <h5 class="spot-address" ng-show="doneInitializing">{{address}}, {{city}}</h5>
 
-<div class="visualize">
-  <div class="crowd-factor">
-    <div class="crowd-visuals">
-      <div class="timeslot" ng-repeat="block in blocks">
-        <h5>{{block.name}}</h5>
-        <table class="{{block.name}}-table">
-          <tr>
-            <th></th>
-            <th ng-repeat="hour in block.hours">{{hour}}</th>
-          </tr>
-          <tr ng-repeat="day in block.days" class="{{day.name}}-row">
-            <td>{{day.label}}</td>
-            <td ng-repeat="hour in day.hours" class="{{hour.cf_status}}-square"></td>
-          </tr>
-        </table>
+  <div class="loading" ng-hide="doneInitializing">    
+    <div id="floatingBarsG">
+      <div class="blockG" id="rotateG_01"></div>
+      <div class="blockG" id="rotateG_02"></div>
+      <div class="blockG" id="rotateG_03"></div>
+      <div class="blockG" id="rotateG_04"></div>
+      <div class="blockG" id="rotateG_05"></div>
+      <div class="blockG" id="rotateG_06"></div>
+      <div class="blockG" id="rotateG_07"></div>
+      <div class="blockG" id="rotateG_08"></div>
+    </div>
+  </div>
+
+  <div class="visualize" ng-show="doneInitializing">
+    <div class="crowd-factor">
+      <div class="crowd-visuals">
+        <div class="timeslot" ng-repeat="block in blocks">
+          <h5>{{block.name}}</h5>
+          <table class="{{block.name}}-table">
+            <tr>
+              <th></th>
+              <th ng-repeat="hour in block.hours">{{hour}}</th>
+            </tr>
+            <tr ng-repeat="day in block.days" class="{{day.name}}-row">
+              <td>{{day.label}}</td>
+              <td ng-repeat="hour in day.hours" class="{{hour.cf_status}}-square"></td>
+            </tr>
+          </table>
+        </div>
       </div>
     </div>
   </div>
 
-  <form class="form-horizontal">
+  <form class="form-horizontal" ng-show="doneInitializing">
     
     <div class="control-group">
       <label class="control-label">Crowd Factor: </label>
@@ -46,7 +60,7 @@
       </div>
     </div>
 
-    <div class="control-group">
+    <div class="control-group" ng-show="doneInitializing">
       <label class="control-label" for="inputHours">Time Window: </label>
       <div class="controls">
         <select class="day-select" ng-model="startDay" ng-options="day.label for day in WEEKDAYS"></select>
@@ -59,16 +73,16 @@
       </div>
     </div>
 
-    <div class="controle-group"><a class="add-watch-btn" ng-click="addWatch()">Add Watch</a></div>
+    <div class="controle-group" ng-show="doneInitializing"><a class="add-watch-btn" ng-click="addWatch()">Add Watch</a></div>
     <br>
-    <div class="control-group">
+    <div class="control-group" ng-show="doneInitializing">
       <div class="controls">
         <button type="submit" class="btn" ng-click="submitWatches()">Save All Watches</button>
       </div>
     </div>
   </form>
 
-  <div class="watch-hours" ng-repeat="watch in watchHours">
+  <div class="watch-hours" ng-repeat="watch in watchHours" ng-show="doneInitializing">
     <h5 class="watch-time">
       {{watch.start.day}} {{watch.start.hour}} {{watch.start.meridiem}} 
       <span class="separator">to</span> 
