--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1926,6 +1926,15 @@ input[type='text']:focus {
   }
 }
 
+#add-review-page{
+  .loading {
+    text-align: left;
+    width: 70px;
+    height: 70px;
+    padding-top: 0;
+  }
+}
+
 .page-element {
   background-color: $page-color;
   padding: 10px;
