Add spinner to edit spot page.  Fix issue where add and edit pages had rounded corners at top.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1478,7 +1478,7 @@ input[type='text']:focus {
 #add-multiple-page,
 #add-spot-page,
 #edit-spot-page {
-  @include page-element(10px, 10px, left);
+  @include page-element(10px, 10px, left, top);
   min-height: 400px;
 
   h3 {
