--- a/app/views/editSpot.html
+++ b/app/views/editSpot.html
@@ -1,7 +1,21 @@
 <div id="edit-spot-page">
   <h3>Edit:</h3>
 
-  <form class="form-horizontal">
+  <div class="loading" ng-hide="doneInitializing">    
+    <div id="floatingBarsG">
+      <div class="blockG" id="rotateG_01"></div>
+      <div class="blockG" id="rotateG_02"></div>
+      <div class="blockG" id="rotateG_03"></div>
+      <div class="blockG" id="rotateG_04"></div>
+      <div class="blockG" id="rotateG_05"></div>
+      <div class="blockG" id="rotateG_06"></div>
+      <div class="blockG" id="rotateG_07"></div>
+      <div class="blockG" id="rotateG_08"></div>
+    </div>
+  </div>
+
+
+  <form class="form-horizontal" ng-show="doneInitializing">
     <div class="control-group">
       <label class="control-label" for="spotName">Name:</label>
       <div class="controls">
