--- a/app/views/addWatch.html
+++ b/app/views/addWatch.html
@@ -34,8 +34,8 @@
         <label class="radio inline crowded">
           <input type="radio" name="cf_status" ng-model="cf_status" value="crowded">Crowded
         </label>
-        <label class="radio inline herd">
-          <input type="radio" name="cf_status" ng-model="cf_status" value="herd">Packed
+        <label class="radio inline packed">
+          <input type="radio" name="cf_status" ng-model="cf_status" value="packed">Packed
         </label>
       </div>
     </div>
