--- a/app/views/main.html
+++ b/app/views/main.html
@@ -76,63 +76,63 @@
               <td class="closed-square"></td>
               <td class="empty-square"></td>
               <td class="empty-square"></td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
+              <td class="packed-square"></td>
+              <td class="packed-square"></td>
+              <td class="packed-square"></td>
             </tr>
             <tr class="tuesday-row">
               <td>Tu</td>
               <td class="closed-square"></td>
               <td class="empty-square"><img class="marker" src="../images/star-icon.png"></td>
               <td class="empty-square"></td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
+              <td class="packed-square"></td>
+              <td class="packed-square"></td>
+              <td class="packed-square"></td>
             </tr>
             <tr class="wednesday-row">
               <td>W</td>
               <td class="closed-square"></td>
               <td class="empty-square"></td>
               <td class="empty-square"></td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
+              <td class="packed-square"></td>
+              <td class="packed-square"></td>
+              <td class="packed-square"></td>
             </tr>
             <tr class="thursday-row">
               <td>Th</td>
               <td class="closed-square"></td>
               <td class="empty-square"></td>
               <td class="empty-square"></td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
+              <td class="packed-square"></td>
+              <td class="packed-square"></td>
+              <td class="packed-square"></td>
             </tr>
             <tr class="friday-row">
               <td>F</td>
               <td class="closed-square"></td>
               <td class="empty-square"></td>
               <td class="empty-square"></td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
+              <td class="packed-square"></td>
+              <td class="packed-square"></td>
+              <td class="packed-square"></td>
             </tr>
             <tr class="saturday-row">
               <td>Sa</td>
               <td class="average-square"></td>
               <td class="crowded-square"></td>
               <td class="crowded-square"></td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
+              <td class="packed-square"></td>
+              <td class="packed-square"></td>
+              <td class="packed-square"></td>
             </tr>
             <tr class="sunday-row">
               <td>Su</td>
               <td class="average-square"></td>
               <td class="crowded-square"></td>
               <td class="crowded-square"></td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
+              <td class="packed-square"></td>
+              <td class="packed-square"></td>
+              <td class="packed-square"></td>
             </tr>
           </table>
         </div>
@@ -150,66 +150,66 @@
             </tr>
             <tr class="monday-row">
               <td>M</td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
+              <td class="packed-square"></td>
+              <td class="packed-square"></td>
+              <td class="packed-square"></td>
+              <td class="packed-square"></td>
+              <td class="packed-square"></td>
+              <td class="packed-square"></td>
             </tr>
             <tr class="tuesday-row">
               <td>Tu</td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
+              <td class="packed-square"></td>
+              <td class="packed-square"></td>
+              <td class="packed-square"></td>
+              <td class="packed-square"></td>
+              <td class="packed-square"></td>
+              <td class="packed-square"></td>
             </tr>
             <tr class="wednesday-row">
               <td>W</td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
+              <td class="packed-square"></td>
+              <td class="packed-square"></td>
+              <td class="packed-square"></td>
+              <td class="packed-square"></td>
+              <td class="packed-square"></td>
+              <td class="packed-square"></td>
             </tr>
             <tr class="thursday-row">
               <td>Th</td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
+              <td class="packed-square"></td>
+              <td class="packed-square"></td>
+              <td class="packed-square"></td>
+              <td class="packed-square"></td>
+              <td class="packed-square"></td>
+              <td class="packed-square"></td>
             </tr>
             <tr class="friday-row">
               <td>F</td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
+              <td class="packed-square"></td>
+              <td class="packed-square"></td>
+              <td class="packed-square"></td>
+              <td class="packed-square"></td>
+              <td class="packed-square"></td>
+              <td class="packed-square"></td>
             </tr>
             <tr class="saturday-row">
               <td>Sa</td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
+              <td class="packed-square"></td>
+              <td class="packed-square"></td>
+              <td class="packed-square"></td>
+              <td class="packed-square"></td>
+              <td class="packed-square"></td>
+              <td class="packed-square"></td>
             </tr>
             <tr class="sunday-row">
               <td>Su</td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
+              <td class="packed-square"></td>
+              <td class="packed-square"></td>
+              <td class="packed-square"></td>
+              <td class="packed-square"></td>
+              <td class="packed-square"></td>
+              <td class="packed-square"></td>
             </tr>
           </table>
         </div>
@@ -254,27 +254,27 @@
             </tr>
             <tr class="thursday-row">
               <td>Th</td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
+              <td class="packed-square"></td>
+              <td class="packed-square"></td>
+              <td class="packed-square"></td>
               <td class="closed-square"></td>
               <td class="closed-square"></td>
               <td class="closed-square"></td>
             </tr>
             <tr class="friday-row">
               <td>F</td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
+              <td class="packed-square"></td>
+              <td class="packed-square"></td>
+              <td class="packed-square"></td>
               <td class="closed-square"></td>
               <td class="closed-square"></td>
               <td class="closed-square"></td>
             </tr>
             <tr class="saturday-row">
               <td>Sa</td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
+              <td class="packed-square"></td>
+              <td class="packed-square"></td>
+              <td class="packed-square"></td>
               <td class="closed-square"></td>
               <td class="closed-square"></td>
               <td class="closed-square"></td>
@@ -303,8 +303,8 @@
               </div>
               <h5>Average</h5>
             </div>
-            <div class="herd">
-              <div class="herd-square color">
+            <div class="packed">
+              <div class="packed-square color">
               </div>
               <h5>Packed</h5>
             </div>
