--- a/app/views/spot.html
+++ b/app/views/spot.html
@@ -119,8 +119,8 @@
               </div>
               <h5>Average</h5>
             </div>
-            <div class="herd">
-              <div class="herd-square color">
+            <div class="packed">
+              <div class="packed-square color">
               </div>
               <h5>Packed</h5>
             </div>
