--- a/app/views/addSpot.html
+++ b/app/views/addSpot.html
@@ -33,12 +33,14 @@
         <span class="required">*</span>
       </div>
     </div>
+
     <div class="control-group">
       <label class="control-label" for="spotAddress2">Address 2</label>
       <div class="controls">
         <input class="" type="text" id="spotAddress2" ng-model="address2" placeholder="Address 2">
       </div>
     </div>
+
     <div class="control-group">
       <label class="control-label" for="spotCity">City</label>
       <div class="controls">
@@ -46,6 +48,7 @@
         <span class="required">*</span>
       </div>
     </div>
+
     <div class="control-group">
       <label class="control-label" for="spotZip">Zip</label>
       <div class="controls">
@@ -53,6 +56,7 @@
         <span class="required">*</span>
       </div>
     </div>
+
     <div class="control-group">
       <label class="control-label" for="spotState">State</label>
       <div class="controls">
@@ -88,7 +92,7 @@
       <label class="control-label">Wifi</label>
       <div class="controls">
         <label class="checkbox inline">
-          <input type="checkbox" id="revTypeFood" ng-model="wifi" value="food">
+          <input type="checkbox" id="spotWifi" ng-model="wifi" value="wifi">
         </label>
       </div>
     </div>
@@ -112,6 +116,58 @@
     <div class="yelp-id-info" ng-show="yelpHelpShow">
       <p>If you go to a business's Yelp page, the id is the part of the url with the business name and location.</p>
       <p>So if you search for Philz coffee in Palo Alto and go to the first listing, the URL is:<br><span class="url">http://www.yelp.com/biz/philz-coffee-palo-alto-2</span> <br>and the Yelp business ID is:<br><span class="url">philz-coffee-palo-alto-2</span>.  <p>There may be a query term after the ID such as <span class="query">#query:coffe</span> if you had found the listing after search for coffee in Palo Alto.  Ignore this hash '<span class="query">#</span>' and anything after it.</p>
+    </div>
+
+    <div class="control-group">
+      <label class="control-label" for="inputOpenTableId">OpenTable ID</label>
+      <div class="controls">
+        <input type="text" id="inputOpenTableId" ng-model="opentable_id" placeholder="OpenTable ID">
+        <a class="clickable yelp-id-help" ng-click="yelpIdHelp()">How to find an OpenTable ID?</a>
+      </div>
+    </div>
+
+    <div class="yelp-id-info" ng-show="yelpHelpShow">
+      <p>If you go to a business's Yelp page, the id is the part of the url with the business name and location.</p>
+      <p>So if you search for Philz coffee in Palo Alto and go to the first listing, the URL is:<br><span class="url">http://www.yelp.com/biz/philz-coffee-palo-alto-2</span> <br>and the Yelp business ID is:<br><span class="url">philz-coffee-palo-alto-2</span>.  <p>There may be a query term after the ID such as <span class="query">#query:coffe</span> if you had found the listing after search for coffee in Palo Alto.  Ignore this hash '<span class="query">#</span>' and anything after it.</p>
+    </div>
+
+    <div class="control-group">
+      <label class="control-label">OrderAhead</label>
+      <div class="controls">
+        <label class="checkbox inline">
+          <input type="checkbox" id="orderahead" ng-model="orderahead" value="orderahead">
+        </label>
+      </div>
+    </div>
+
+    <div class="control-group">
+      <label class="control-label">DoorDash</label>
+      <div class="controls">
+        <label class="checkbox inline">
+          <input type="checkbox" id="doordash" ng-model="doordash" value="doordash">
+        </label>
+      </div>
+    </div>
+
+    <div class="control-group">
+      <label class="control-label" for="spotZip">Phone</label>
+      <div class="controls">
+        <input type="text" id="spotPhone" ng-model="phone" placeholder="Phone Number">
+      </div>
+    </div>
+
+    <div class="control-group">
+      <label class="control-label" for="spotEmail">Email</label>
+      <div class="controls">
+        <input type="text" id="spotEmail" ng-model="email" placeholder="Email Address">
+      </div>
+    </div>
+
+    <div class="control-group">
+      <label class="control-label" for="spotWebsite">Website</label>
+      <div class="controls">
+        <input class="{{validForm.zip}}" type="text" id="spotWebsite" ng-model="website" placeholder="http://">
+      </div>
     </div>
 
     <div class="control-group">
