--- a/app/views/editSpot.html
+++ b/app/views/editSpot.html
@@ -22,8 +22,104 @@
         <input class="{{validForm.name}}" type="text" id="spotName" ng-model="spotName" placeholder="Spot Name">
       </div>
     </div>
+
     <div class="control-group">
-      <label class="control-label" for="inputYelpId">Yelp ID:</label>
+      <label class="control-label">Type of Spot</label>
+      <div class="controls">
+        <label class="checkbox inline">
+          <input type="checkbox" id="revTypeFood" ng-model="food" value="food"><span class="{{validForm.type}}">Food</span>
+        </label>
+        <label class="checkbox inline">
+          <input type="checkbox" id="revTypeStudy" ng-model="study" value="study"><span class="{{validForm.type}}">Study</span>
+        </label>
+        <label class="checkbox inline">
+          <input type="checkbox" id="revTypeSocial" ng-model="social" value="social"><span class="{{validForm.type}}">Social</span>
+        </label>
+        <span class="required">*</span>
+      </div>
+    </div>
+
+    <div class="control-group">
+      <label class="control-label" for="spotAddress">Address</label>
+      <div class="controls">
+        <input class="{{validForm.address}}" type="text" id="spotAddress" ng-model="address" placeholder="Address">
+        <span class="required">*</span>
+      </div>
+    </div>
+
+    <div class="control-group">
+      <label class="control-label" for="spotAddress2">Address 2</label>
+      <div class="controls">
+        <input class="" type="text" id="spotAddress2" ng-model="address2" placeholder="Address 2">
+      </div>
+    </div>
+
+    <div class="control-group">
+      <label class="control-label" for="spotCity">City</label>
+      <div class="controls">
+        <input class="{{validForm.city}}" type="text" id="spotCity" ng-model="city" placeholder="City">
+        <span class="required">*</span>
+      </div>
+    </div>
+
+    <div class="control-group">
+      <label class="control-label" for="spotZip">Zip</label>
+      <div class="controls">
+        <input class="{{validForm.zip}}" type="text" id="spotZip" ng-model="postal_code" placeholder="Zip">
+        <span class="required">*</span>
+      </div>
+    </div>
+
+    <div class="control-group">
+      <label class="control-label" for="spotState">State</label>
+      <div class="controls">
+        <input class="{{validForm.state}}" type="text" id="spotState" ng-model="state_code" placeholder="State">
+        <span class="required">*</span>
+      </div>
+    </div>
+
+    <div class="control-group">
+      <label class="control-label" for="inputHours">Hours: </label>
+      <div class="controls class="{{validForm.hours}}"">
+        <select class="day-select" ng-model="openDay" ng-options="day.label for day in WEEKDAYS"></select>
+        <select class="hour-select" ng-model="openHour" ng-options="hour.label for hour in HOURS"></select>
+        <select class="meridiem-select" ng-model="openMeridiem" ng-options="meridiem.label for meridiem in MERIDIEMS"></select>
+        <span class="to-label">To</span> 
+        <select class="hour-select" ng-model="closeHour" ng-options="hour.label for hour in HOURS"></select>
+        <select class="meridiem-select" ng-model="closeMeridiem" ng-options="meridiem.label for meridiem in MERIDIEMS"></select>
+        <span class="required">*</span>
+        <a class="clickable" ng-click="addHours()">Add Hours</a>
+      </div>
+    </div>
+
+    <div class="business-hours" ng-repeat="time in business_hours">
+      <h5>
+        {{time.open_day.label}} {{time.open_hour.label}} {{time.open_meridiem.label}} 
+        <span class="to">To</span> 
+        {{time.close_hour.label}} {{time.close_meridiem.label}}
+      </h5>
+      <a class="clickable" ng-click="deleteHours($index)">delete</a>
+    </div>
+
+    <div class="control-group">
+      <label class="control-label">Wifi</label>
+      <div class="controls">
+        <label class="checkbox inline">
+          <input type="checkbox" id="spotWifi" ng-model="wifi" value="wifi">
+        </label>
+      </div>
+    </div>
+
+    <div class="control-group">
+      <label class="control-label" for="imageLoader">Upload Picture</label><br/>
+      <div class="controls image-load-control">
+        <input type="file" id="imageLoader" accept="image/*" image="image2" resize-max-height="100" resize-max-width="100" resize-quality="0.7" />
+        <img ng-show="image2" ng-src="{{image2.resized.dataURL}}"/>
+      </div>
+    </div>
+
+    <div class="control-group">
+      <label class="control-label" for="inputYelpId">Yelp ID</label>
       <div class="controls">
         <input type="text" id="inputYelpId" ng-model="yelp_id" placeholder="Yelp ID">
         <a class="clickable yelp-id-help" ng-click="yelpIdHelp()">How to find a Yelp ID?</a>
@@ -36,89 +132,55 @@
     </div>
 
     <div class="control-group">
-      <label class="control-label" for="spotAddress">Address:</label>
+      <label class="control-label" for="inputOpenTableId">OpenTable ID</label>
       <div class="controls">
-        <input class="{{validForm.address}}" type="text" id="spotAddress" ng-model="address" placeholder="Address">
-      </div>
-    </div>
-    <div class="control-group">
-      <label class="control-label" for="spotAddress2">Address2:</label>
-      <div class="controls">
-        <input type="text" id="spotAddress2" ng-model="address2" placeholder="Address2">
-      </div>
-    </div>
-    <div class="control-group">
-      <label class="control-label" for="spotCity">City:</label>
-      <div class="controls">
-        <input class="{{validForm.city}}" type="text" id="spotCity" ng-model="city" placeholder="City">
-      </div>
-    </div>
-    <div class="control-group">
-      <label class="control-label" for="spotZip">Zip:</label>
-      <div class="controls">
-        <input class="{{validForm.zip}}" type="text" id="spotZip" ng-model="postal_code" placeholder="Zip">
-      </div>
-    </div>
-    <div class="control-group">
-      <label class="control-label" for="spotState">State:</label>
-      <div class="controls">
-        <input class="{{validForm.state}}" type="text" id="spotState" ng-model="state_code" placeholder="State">
+        <input type="text" id="inputOpenTableId" ng-model="opentable_id" placeholder="OpenTable ID">
+        <a class="clickable yelp-id-help" ng-click="yelpIdHelp()">How to find an OpenTable ID?</a>
       </div>
     </div>
 
+    <div class="yelp-id-info" ng-show="yelpHelpShow">
+      <p>If you go to a business's Yelp page, the id is the part of the url with the business name and location.</p>
+      <p>So if you search for Philz coffee in Palo Alto and go to the first listing, the URL is:<br><span class="url">http://www.yelp.com/biz/philz-coffee-palo-alto-2</span> <br>and the Yelp business ID is:<br><span class="url">philz-coffee-palo-alto-2</span>.  <p>There may be a query term after the ID such as <span class="query">#query:coffe</span> if you had found the listing after search for coffee in Palo Alto.  Ignore this hash '<span class="query">#</span>' and anything after it.</p>
+    </div>
+
     <div class="control-group">
-      <label class="control-label">Wifi:</label>
+      <label class="control-label">OrderAhead</label>
       <div class="controls">
         <label class="checkbox inline">
-          <input type="checkbox" id="revTypeFood" ng-model="wifi" value="food">
+          <input type="checkbox" id="orderahead" ng-model="orderahead" value="orderahead">
         </label>
       </div>
     </div>
 
     <div class="control-group">
-      <label class="control-label" for="imageLoader">Upload Picture:</label><br/>
-      <div class="controls image-load-control">
-        <input type="file" id="imageLoader" accept="image/*" image="image2" resize-max-height="100" resize-max-width="100" resize-quality="0.7" />
-        <img ng-show="image2" ng-src="{{image2.resized.dataURL}}"/>
-        <img ng-hide="image2" ng-model="image_url" ng-src="{{image_url}}"/>
-      </div>
-    </div>
-
-    <div class="control-group">
-      <label class="control-label">Type of Spot:</label>
+      <label class="control-label">DoorDash</label>
       <div class="controls">
         <label class="checkbox inline">
-          <input type="checkbox" id="revTypeFood" ng-model="food" value="food"><span class="{{validForm.type}}">Food</span>
-        </label>
-        <label class="checkbox inline">
-          <input type="checkbox" id="revTypeStudy" ng-model="study" value="study"><span class="{{validForm.type}}">Study</span>
-        </label>
-        <label class="checkbox inline">
-          <input type="checkbox" id="revTypeSocial" ng-model="social" value="social"><span class="{{validForm.type}}">Social</span>
+          <input type="checkbox" id="doordash" ng-model="doordash" value="doordash">
         </label>
       </div>
     </div>
 
     <div class="control-group">
-      <label class="control-label" for="inputHours">Hours: </label>
-      <div class="controls class="{{validForm.hours}}"">
-        <select class="day-select" ng-model="openDay" ng-options="day.label for day in WEEKDAYS"></select>
-        <select class="hour-select" ng-model="openHour" ng-options="hour.label for hour in HOURS"></select>
-        <select class="meridiem-select" ng-model="openMeridiem" ng-options="meridiem.label for meridiem in MERIDIEMS"></select>
-        <span class="to-label">To</span>
-        <select class="hour-select" ng-model="closeHour" ng-options="hour.label for hour in HOURS"></select>
-        <select class="meridiem-select" ng-model="closeMeridiem" ng-options="meridiem.label for meridiem in MERIDIEMS"></select>
-        <a class="clickable" ng-click="addHours()">Add Hours</a>
+      <label class="control-label" for="spotZip">Phone</label>
+      <div class="controls">
+        <input type="text" id="spotPhone" ng-model="phone" placeholder="Phone Number">
       </div>
     </div>
 
-    <div class="business-hours" ng-repeat="time in business_hours">
-      <h5>
-        {{time.open_day.label}} {{time.open_hour.label}} {{time.open_meridiem.label}} 
-        <span class="to-label">To</span> 
-        {{time.close_hour.label}} {{time.close_meridiem.label}}
-      </h5>
-      <a class="clickable" ng-click="deleteHours($index)">delete</a>
+    <div class="control-group">
+      <label class="control-label" for="spotEmail">Email</label>
+      <div class="controls">
+        <input type="text" id="spotEmail" ng-model="email" placeholder="Email Address">
+      </div>
+    </div>
+
+    <div class="control-group">
+      <label class="control-label" for="spotWebsite">Website</label>
+      <div class="controls">
+        <input class="{{validForm.zip}}" type="text" id="spotWebsite" ng-model="website" placeholder="http://">
+      </div>
     </div>
 
     <div class="control-group">
@@ -127,4 +189,6 @@
       </div>
     </div>
   </form>
+  <br>
+  <p><span class="required">*</span> Required</p>
 </div>
