--- a/app/views/spot.html
+++ b/app/views/spot.html
@@ -52,8 +52,14 @@
           </div>
           <p class="watch-comment" ng-show="current_user"><span class="watch-comment-user">{{current_user}}</span> says: {{current_comment}}</p>
         </div>
-        <div class="yelp-link">
+        <!--<div class="yelp-link">
           <a ng-href="{{spot.yelpLink}}"><h4>Yelp Reviews</h4></a>
+        </div>-->
+        <div class="service" ng-repeat="service in externalServices">
+          <a class="service-link" ng-href="{{service.link}}">
+            <img class="service-image" heigth="30px" width="30px" alt="{{service.name}} logo" ng-src="{{service.logo}}">
+            <h5 class="service-name">{{service.name}}</h5>
+          </a>
         </div>
         <button type="button" class="btn fav" ng-click="addToFavs()">FAV :)</button>
       </div>
