--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1042,6 +1042,7 @@ input[type='text']:focus {
 
     .service {
       display: inline-block;
+      margin: 0 5px 0 0;
       text-align: center;
     }
 
