--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1042,7 +1042,7 @@ input[type='text']:focus {
 
     .service {
       display: inline-block;
-      margin: 0 5px 0 0;
+      margin: 0 10px 0 0;
       text-align: center;
     }
 
@@ -1056,7 +1056,6 @@ input[type='text']:focus {
 
     .service-name {
       margin: 0 0 0 0;
-      color: $comp1-dark;
     }
 
     .yelp-link {
@@ -1087,7 +1086,7 @@ input[type='text']:focus {
   
   .fav {
     display: inline-block;
-    margin: 0 0 20px 40px;
+    margin: 0 0 53px 0;
   }
 
   .edit-spot {
